[gd_scene load_steps=3 format=3 uid="uid://cardui123"]

[ext_resource type="Script" path="res://scripts/components/CardUI.gd" id="1_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.25, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CardUI" type="Panel"]
custom_minimum_size = Vector2(120, 160)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_card")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Name"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0, 1, 1, 1)
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cost: 0"
theme_override_colors/font_color = Color(1, 1, 0, 1)
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Type"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Card description goes here"
theme_override_font_sizes/font_size = 11
autowrap_mode = 2